--- a/src/app/shared/pages/layout/layout.component.html
+++ b/src/app/shared/pages/layout/layout.component.html
@@ -1,11 +1,11 @@
-<h1>Hero Layout</h1>
+
 <mat-sidenav-container fullscreen>
 
   <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '300px' }">
     <mat-toolbar>
       <span>Lanzar dado</span>
       <span class="spacer"></span>
-      <button mat-icon-button (click)="sidenav.toggle()">
+      <button #dadoButton mat-icon-button (click)="sidenav.toggle()">
         <img src="assets/images/dado.png" alt="Menu">
       </button>
     </mat-toolbar>
@@ -27,15 +27,7 @@
   </mat-toolbar>
 
   <div class="container p-2">
-    <!-- <historia-libro-page></historia-libro-page> -->
     <router-outlet></router-outlet>
   </div>
 
 </mat-sidenav-container>
-
-
-
-
-
-<h5>Footer</h5>
-
