--- a/src/app/ubicaciones/pages/ubicaciones-ciudad/ubicaciones-ciudad.component.html
+++ b/src/app/ubicaciones/pages/ubicaciones-ciudad/ubicaciones-ciudad.component.html
@@ -1,4 +1,8 @@
+
 <div class="container">
+  <div class="titulo_ciudad">
+    <h1>{{ nombreCiudad }}</h1>
+  </div>
   <div class="grid-container">
     <mat-grid-list class="grid-list" cols="3" rowHeight="100px">
       <mat-grid-tile *ngFor="let tile of tiles; trackBy: indexTile"
