--- a/src/app/ubicaciones/pages/ubicaciones-region/ubicaciones-region.component.css
+++ b/src/app/ubicaciones/pages/ubicaciones-region/ubicaciones-region.component.css
@@ -1,66 +1,3 @@
-/* .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.map-container {
-  width: 60%;
-  margin: 3%;
-  overflow: hidden;
-  position: relative;
-}
-
-.map-container img {
-  width: 100%;
-  height: auto;
-}
-
-.controls-container {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.arrow {
-  position: absolute;
-  cursor: pointer;
-}
-
-.arrow-up {
-  top: 100%;
-  transform: translate(280%, -100%);
-}
-
-.arrow-right {
-  bottom: 40%;
-  right: 45%;
-  transform: translate(200%, 100%);
-}
-
-.arrow-down {
-  bottom: 40%;
-  left: 45%;
-  transform: translate(270%, 130%);
-}
-
-.arrow-left {
-  top: 45%;
-  left: 45%;
-  transform: translate(0%, 0%);
-}
-
-.text-container {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  margin-right: 3%;
-}
-
-
- */
 
  img{
   height: 100%;
@@ -103,23 +40,8 @@
   transform: translate(0%, 0%);
 }
 
-.texto-auxiliar{
+/* .texto-auxiliar{
   border: solid;
-}
-
-
-/* @media (max-width: 600px) {
-  img {
-    width: 100%;
-  }
-}
-@media (max-width: 600px) {
-  img {
-    width: 100%;
-  }
-}
-@media (max-width: 2000px) {
-  img {
-    width: 80%;
-  }
 } */
+
+
