--- a/src/app/ubicaciones/pages/ubicaciones-region/ubicaciones-region.component.html
+++ b/src/app/ubicaciones/pages/ubicaciones-region/ubicaciones-region.component.html
@@ -1,25 +1,33 @@
 
 <div >
   <mat-grid-list [cols]="6" rowHeight="500px" gutterSize="4">
-    <mat-grid-tile class="flechas"
+    <mat-grid-tile class="texto-auxiliar"
     [colspan]="1"
     [rowspan]="2">
-    <div class="control">
-      <div class="arrow arrow-up" (click)="onClick('up')"><img src="assets/images/itineracion/arrow-up.png" alt=""></div>
-      <div class="arrow arrow-right" (click)="onClick('right')"><img src="assets/images/itineracion/arrow-right.png" alt=""></div>
-      <div class="arrow arrow-down" (click)="onClick('down')"><img src="assets/images/itineracion/arrow-down.png" alt=""></div>
-      <div class="arrow arrow-left" (click)="onClick('left')"><img src="assets/images/itineracion/arrow-left.png" alt=""></div>
-    </div>
+    <ul>
+      <li>Ubicación actual: <strong>{{ ubicacionActual }}</strong></li>
+      <li *ngIf="distancia > 0 && mostrarInfoDistancia">Distancia hasta destino: {{distancia}}</li>
+      <li *ngIf="resultadoDado > 0 && mostrarInfoDistancia">Resultado Dado: {{ resultadoDado }}</li>
+      <button mat-raised-button *ngIf="llegadoADestino && codigoCiudad > 0" (click)="openDialogEntrar('3000ms', '1500ms')">Entrar en {{ ubicacionDestino }}</button>
+      <button mat-raised-button *ngIf="llegadoADestino && descanso" (click)="openDialogDescansar('3000ms', '1500ms')">Descansar en {{ ubicacionDestino }}</button>
+
+    </ul>
   </mat-grid-tile>
     <mat-grid-tile class="map-container"
       [colspan]="4"
       [rowspan]="2">
-      <img (click)="onImageClick($event)" src="assets/images/itineracion/Sancto Regnum Norte Nodos.jpg" alt="Mapa">
+      <img src="assets/images/itineracion/Sancto Regnum Norte Nodos.jpg" alt="Mapa">
     </mat-grid-tile>
-    <mat-grid-tile class="texto-auxiliar"
-    [colspan]="1"
-    [rowspan]="1">
-    {{ ubicacionActual }}
-  </mat-grid-tile>
+  <mat-grid-tile class="flechas"
+  [colspan]="1"
+  [rowspan]="2">
+  <div class="control">
+    <div class="arrow arrow-up" (click)="onClick('up')"><img src="assets/images/itineracion/arrow-up.png" alt=""></div>
+    <div class="arrow arrow-right" (click)="onClick('right')"><img src="assets/images/itineracion/arrow-right.png" alt=""></div>
+    <div class="arrow arrow-down" (click)="onClick('down')"><img src="assets/images/itineracion/arrow-down.png" alt=""></div>
+    <div class="arrow arrow-left" (click)="onClick('left')"><img src="assets/images/itineracion/arrow-left.png" alt=""></div>
+  </div>
+</mat-grid-tile>
   </mat-grid-list>
 </div>
+
